--- a/static/css/main.css
+++ b/static/css/main.css
@@ -771,6 +771,10 @@ video {
   letter-spacing: 0.025em;
 }
 
+.tracking-tight {
+  letter-spacing: -0.025em;
+}
+
 .text-darkgrayishblue {
   --tw-text-opacity: 1;
   color: rgb(108 114 137 / var(--tw-text-opacity));
@@ -806,19 +810,39 @@ video {
     height: 60%;
   }
 
-  .desktop\:w-1\/3 {
-    width: 33.333333%;
-  }
-
   .desktop\:w-1\/2 {
     width: 50%;
+  }
+
+  .desktop\:max-w-3xl {
+    max-width: 48rem;
+  }
+
+  .desktop\:max-w-2xl {
+    max-width: 42rem;
   }
 
   .desktop\:flex-row {
     flex-direction: row;
   }
 
-  .desktop\:p-8 {
-    padding: 2rem;
+  .desktop\:p-9 {
+    padding: 2.25rem;
+  }
+
+  .desktop\:pr-12 {
+    padding-right: 3rem;
+  }
+
+  .desktop\:pr-10 {
+    padding-right: 2.5rem;
+  }
+
+  .desktop\:pr-8 {
+    padding-right: 2rem;
+  }
+
+  .desktop\:pr-2 {
+    padding-right: 0.5rem;
   }
 }
